--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </section>
 
 <footer style="text-align: center; padding: 20px; background-color: #16A085; color: white;">
-    <p>© 2024 [Your Name] | MOS Certification Training</p>
+    <p>© 2024 i-NEW | MOS Certification Training</p>
 </footer>
 
 </body>
